--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,9 @@ typings/
 
 # Optional REPL history
 .node_repl_history
+
+# Private keys or credentials
+*credentials.json
+*private-key.json
+*private.key
+*jwt-keys.json
