--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# =========================
-# Operating System Files
-# =========================
-
 # OSX
-# =========================
-
 .DS_Store
 .AppleDouble
 .LSOverride
@@ -59,12 +53,6 @@ pids
 *.seed
 *.pid.lock
 
-# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
-# Bower dependency directory (https://bower.io/)
-bower_components
-
 # node-waf configuration
 .lock-wscript
 
@@ -74,6 +62,9 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+
+# Package lock
+package-lock.json
 
 # Typescript v1 declaration files
 typings/
