--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "debug": "node --no-lazy --inspect-brk index.js",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,13 @@
   },
   "homepage": "https://github.com/chet-manley/torrent-automation#readme",
   "dependencies": {
-    "googleapis": "^34.0.0"
+    "googleapis": "^34.0.0",
+    "joi": "^14.0.1"
+  },
+  "devDependencies": {
+    "dotenv": "^6.1.0",
+    "eslint": "^5.7.0",
+    "eslint-plugin-jest": "^21.26.0",
+    "jest": "^23.6.0"
   }
 }
