--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,9 @@ pids
 # node-waf configuration
 .lock-wscript
 
+# Typescript v1 declaration files
+typings/
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
@@ -63,25 +66,17 @@ build/Release
 node_modules/
 jspm_packages/
 
-# Typescript v1 declaration files
-typings/
-
-# Optional eslint cache
+# Caches
 .eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Optional npm cache directory
 .npm
-
-# Package lock
-package-lock.json
-
-# code coverage cache
+.node_repl_history
+# Jest code coverage cache
 coverage/
 
-# Private info
+# npm package lock
+package-lock.json
+
+# Private data
 *credentials.json
 *private-key.json
 *private.key
