--- a/lib/Logger/config/default.config.json
+++ b/lib/Logger/config/default.config.json
@@ -1,10 +1,6 @@
 {
   "enabled": true,
-  "level": {
-    "default": 4,
-    "max": 7,
-    "min": 0
-  },
+  "priority": 4,
   "levels": {
     "emerg": 0,
     "emergency": 0,
@@ -19,5 +15,6 @@
     "info": 6,
     "information": 6,
     "debug": 7
-  }
+  },
+  "throw": false
 }
