--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "torrent-automation",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index",
   "scripts": {
     "debug": "node --no-lazy --inspect-brk index.js",
     "test": "jest",
@@ -19,13 +19,16 @@
   },
   "homepage": "https://github.com/chet-manley/torrent-automation#readme",
   "dependencies": {
+    "app-root-path": "^2.1.0",
     "googleapis": "^34.0.0",
-    "joi": "^14.0.1"
+    "joi": "^14.0.3",
+    "winston": "^3.1.0",
+    "yargs": "^12.0.2"
   },
   "devDependencies": {
     "dotenv": "^6.1.0",
-    "eslint": "^5.7.0",
-    "eslint-plugin-jest": "^21.26.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-jest": "^21.26.2",
     "jest": "^23.6.0"
   }
 }
